<resources>
    <string name="app_name">Gaming World</string>
    <string name="login_text">A sister concern of hello gaming</string>

    <string name="err_tel">enter valid phone Number</string>
    <string name="err_password">enter valid password</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_password">enter password</string>
    <string name="login">Login</string>
    <string name="new_user_registration_now">New User? Registration Now</string>
    <string name="welcome">Gaming World</string>
    <string name="developed">Developed by Team15</string>
    <string name="write_now">মেসেজ করুন</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_login">Wrong! check phone and password</string>
    <string name="reg_welcome_note">Welcome To Gaming World</string>
    <string name="about1">Small remark when filling in this Privacy Policy generator: Not all parts of this Privacy Policy might be applicable to your website. When there are parts that are not applicable, these can be removed. Optional elements can be selected in step 2. The accuracy of the generated Privacy Policy on this website is not legally binding. Use at your own risk.</string>
    <string name="forget_password">Forget Password!</string>
    <string name="pending_point">Pending Point</string>
    <string name="ref_point">Ref Point</string>
    <string name="_00">00</string>
    <string name="point">Point</string>
    <string name="purchase">Purchase</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="reference_code">Reference Code</string>
    <string name="refer_by">Refer By</string>
    <string name="enter_reference_code">enter reference code</string>
    <string name="save">Save</string>
    <string name="seller_contact">Seller Contact</string>
    <string name="hotline">Hotline:</string>
    <string name="facebook">FaceBook:</string>
    <string name="mail">Mail:</string>
    <string name="our_product">Our Product:</string>
    <string name="no_data_available">No Data Available</string>
    <string name="type_a_message">Type a message...</string>
</resources>